# eosio.cdt

./: CMakeLists.txt  InstallClang.txt  package_install.sh
libraries/boost/: CMakeLists.txt
libraries/eosiolib/: CMakeLists.txt  asset.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
scripts/ricardeos/: README.md
